crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__quotation-groups-smart.snap
---
source: crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "languages": [
    "eng",
    "heb",
    "spa"
  ],
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng",
          "heb",
          "spa"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Child",
            "speaker_code": "CHI"
          },
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "3;00.",
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Child",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Smart-quote quotation groups (Unicode left/right double quotes)",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Constructs: quotation groups with U+201C/U+201D delimiters,",
              "type": "text"
            },
            {
              "type": "continuation"
            },
            {
              "text": "including pauses inside quotes",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Source: Hebrew-Berman Frogs and CallFriend Spanish examples",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "amar",
              "content": [
                {
                  "content": "amar",
                  "type": "text"
                }
              ],
              "raw_text": "amar",
              "type": "word"
            },
            {
              "cleaned_text": "lekalbo",
              "content": [
                {
                  "content": "lekalbo",
                  "type": "text"
                }
              ],
              "raw_text": "lekalbo",
              "type": "word"
            },
            {
              "kind": "comma",
              "type": "separator"
            },
            {
              "content": {
                "content": [
                  {
                    "cleaned_text": "shhh",
                    "content": [
                      {
                        "content": "shhh",
                        "type": "text"
                      }
                    ],
                    "raw_text": "shhh",
                    "type": "word"
                  },
                  {
                    "duration": {
                      "type": "medium"
                    },
                    "type": "pause"
                  },
                  {
                    "cleaned_text": "shhh",
                    "content": [
                      {
                        "content": "shhh",
                        "type": "text"
                      }
                    ],
                    "raw_text": "shhh",
                    "type": "word"
                  },
                  {
                    "duration": {
                      "type": "medium"
                    },
                    "type": "pause"
                  }
                ]
              },
              "type": "quotation"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "she",
              "content": [
                {
                  "content": "she",
                  "type": "text"
                }
              ],
              "raw_text": "she",
              "type": "word"
            },
            {
              "cleaned_text": "said",
              "content": [
                {
                  "content": "said",
                  "type": "text"
                }
              ],
              "raw_text": "said",
              "type": "word"
            },
            {
              "content": {
                "content": [
                  {
                    "cleaned_text": "hello",
                    "content": [
                      {
                        "content": "hello",
                        "type": "text"
                      }
                    ],
                    "raw_text": "hello",
                    "type": "word"
                  }
                ]
              },
              "type": "quotation"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "options": [],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "3;00.",
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Child",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Child"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    }
  }
}
