crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__quotation.snap
---
source: rust/crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": "Timmy",
            "role": "Target_Child",
            "speaker_code": "CHI"
          },
          {
            "name": "Linda",
            "role": "Investigator",
            "speaker_code": "LIN"
          },
          {
            "name": "Winnie",
            "role": "Investigator",
            "speaker_code": "WIN"
          },
          {
            "name": "Gemma",
            "role": "Speaker",
            "speaker_code": "GEM"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "2;",
        "corpus": "timmy",
        "language": "eng",
        "role": "Target_Child",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "timmy",
        "language": "eng",
        "role": "Investigator",
        "speaker": "LIN",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "timmy",
        "language": "eng",
        "role": "Investigator",
        "speaker": "WIN",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "timmy",
        "language": "eng",
        "role": "Speaker",
        "speaker": "GEM",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "inlined quotation, with or without group",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": {
                "content": [
                  {
                    "category": "nonword",
                    "content": [
                      {
                        "content": "foo",
                        "type": "text"
                      }
                    ],
                    "raw_text": "&~foo",
                    "span": {
                      "end": 353,
                      "start": 348
                    },
                    "type": "word"
                  },
                  {
                    "content": [
                      {
                        "content": "and",
                        "type": "text"
                      }
                    ],
                    "raw_text": "and",
                    "span": {
                      "end": 357,
                      "start": 354
                    },
                    "type": "word"
                  },
                  {
                    "content": [
                      {
                        "content": "more",
                        "type": "text"
                      }
                    ],
                    "raw_text": "more",
                    "span": {
                      "end": 362,
                      "start": 358
                    },
                    "type": "word"
                  }
                ]
              },
              "type": "quotation"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": {
                "content": [
                  {
                    "content": {
                      "content": [
                        {
                          "content": [
                            {
                              "content": "wij",
                              "type": "text"
                            }
                          ],
                          "raw_text": "wij",
                          "span": {
                            "end": 381,
                            "start": 378
                          },
                          "type": "word"
                        },
                        {
                          "content": [
                            {
                              "content": "hebben",
                              "type": "text"
                            }
                          ],
                          "raw_text": "hebben",
                          "span": {
                            "end": 388,
                            "start": 382
                          },
                          "type": "word"
                        },
                        {
                          "content": [
                            {
                              "content": "een",
                              "type": "text"
                            }
                          ],
                          "raw_text": "een",
                          "span": {
                            "end": 392,
                            "start": 389
                          },
                          "type": "word"
                        },
                        {
                          "content": [
                            {
                              "content": "kikker",
                              "type": "text"
                            }
                          ],
                          "raw_text": "kikker",
                          "span": {
                            "end": 399,
                            "start": 393
                          },
                          "type": "word"
                        },
                        {
                          "content": [
                            {
                              "content": "gevangen",
                              "type": "text"
                            }
                          ],
                          "raw_text": "gevangen",
                          "span": {
                            "end": 408,
                            "start": 400
                          },
                          "type": "word"
                        }
                      ]
                    },
                    "type": "quotation"
                  }
                ]
              },
              "scoped_annotations": [
                {
                  "type": "overlap_begin"
                }
              ],
              "type": "annotated_group"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "2;",
        "corpus": "timmy",
        "language": "eng",
        "role": "Target_Child",
        "speaker": "CHI"
      },
      "name": "Timmy",
      "role": "Target_Child"
    },
    "GEM": {
      "birth_date": null,
      "code": "GEM",
      "id": {
        "corpus": "timmy",
        "language": "eng",
        "role": "Speaker",
        "speaker": "GEM"
      },
      "name": "Gemma",
      "role": "Speaker"
    },
    "LIN": {
      "birth_date": null,
      "code": "LIN",
      "id": {
        "corpus": "timmy",
        "language": "eng",
        "role": "Investigator",
        "speaker": "LIN"
      },
      "name": "Linda",
      "role": "Investigator"
    },
    "WIN": {
      "birth_date": null,
      "code": "WIN",
      "id": {
        "corpus": "timmy",
        "language": "eng",
        "role": "Investigator",
        "speaker": "WIN"
      },
      "name": "Winnie",
      "role": "Investigator"
    }
  }
}
