crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__quotes-pass.snap
---
source: crates/talkbank-parser-tests/src/snapshot.rs
assertion_line: 140
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Child",
            "speaker_code": "CHI"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "change_me_later",
        "language": "eng",
        "role": "Child",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "content": {
              "segments": [
                {
                  "text": "this should pass, because MOR should not be generating anything for",
                  "type": "text"
                },
                {
                  "type": "continuation"
                },
                {
                  "text": "the quotes",
                  "type": "text"
                }
              ]
            }
          },
          "type": "Com"
        },
        {
          "data": {
            "items": [
              {
                "main": {
                  "features": [
                    "Prs",
                    "Nom",
                    "S3"
                  ],
                  "lemma": "she",
                  "pos": "pron"
                }
              },
              {
                "main": {
                  "features": [
                    "Fin",
                    "Ind",
                    "Past",
                    "S3",
                    "irr"
                  ],
                  "lemma": "say",
                  "pos": "verb"
                }
              },
              {
                "main": {
                  "features": [
                    "Prs",
                    "Nom",
                    "S1"
                  ],
                  "lemma": "I",
                  "pos": "pron"
                }
              },
              {
                "main": {
                  "features": [
                    "Fin",
                    "Ind",
                    "Pres",
                    "S1"
                  ],
                  "lemma": "want",
                  "pos": "verb"
                }
              },
              {
                "main": {
                  "features": [
                    "Plur",
                    "Acc"
                  ],
                  "lemma": "cookie",
                  "pos": "noun"
                }
              }
            ],
            "terminator": ".",
            "tier_type": "Mor"
          },
          "type": "Mor"
        },
        {
          "data": {
            "relations": [
              {
                "head": 2,
                "index": 1,
                "relation": "NSUBJ"
              },
              {
                "head": 0,
                "index": 2,
                "relation": "ROOT"
              },
              {
                "head": 4,
                "index": 3,
                "relation": "NSUBJ"
              },
              {
                "head": 2,
                "index": 4,
                "relation": "CCOMP"
              },
              {
                "head": 4,
                "index": 5,
                "relation": "OBJ"
              },
              {
                "head": 2,
                "index": 6,
                "relation": "PUNCT"
              }
            ],
            "tier_type": "Gra"
          },
          "type": "Gra"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "she",
                  "type": "text"
                }
              ],
              "raw_text": "she",
              "span": {
                "end": 105,
                "start": 102
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "said",
                  "type": "text"
                }
              ],
              "raw_text": "said",
              "span": {
                "end": 110,
                "start": 106
              },
              "type": "word"
            },
            {
              "content": {
                "content": [
                  {
                    "content": [
                      {
                        "content": "I",
                        "type": "text"
                      }
                    ],
                    "raw_text": "I",
                    "span": {
                      "end": 115,
                      "start": 114
                    },
                    "type": "word"
                  },
                  {
                    "content": [
                      {
                        "content": "want",
                        "type": "text"
                      }
                    ],
                    "raw_text": "want",
                    "span": {
                      "end": 120,
                      "start": 116
                    },
                    "type": "word"
                  },
                  {
                    "content": [
                      {
                        "content": "cookies",
                        "type": "text"
                      }
                    ],
                    "raw_text": "cookies",
                    "span": {
                      "end": 128,
                      "start": 121
                    },
                    "type": "word"
                  }
                ]
              },
              "type": "quotation"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "corpus": "change_me_later",
        "language": "eng",
        "role": "Child",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Child"
    }
  }
}
